# 3DFPSGame

3DFPSgame/: CMakeLists.txt  Camera.cpp  Camera.hpp  Gun.cpp  Gun.hpp  Model.cpp  Model.hpp  Physics.cpp  Physics.hpp  PlayerController.cpp  PlayerController.hpp  Shader.cpp  Shader.hpp  floor.fbx  floor2.fbx  main.cpp
3DFPSgame/shaders/: fragment.frag
